# Omni-Studio

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  _build.bat  activitybar.cpp  activitybar.h  backlinkindex.cpp  backlinkindex.h  backlinkspanel.cpp  backlinkspanel.h  bottompanel.cpp  bottompanel.h  brackethighlighter.cpp  brackethighlighter.h  build.bat  build.sh  build_temp.bat  codeblockrunner.cpp  codeblockrunner.h  codeeditor.cpp  codeeditor.h  compilererrorparser.h  compilerunmanager.cpp  compilerunmanager.h  compilerutils.h  completion_helper.py  completionmanager.cpp  completionmanager.h  completionpopup.cpp  completionpopup.h  completionprovider.h  config.json  configmanager.cpp  configmanager.h  cppcompletionprovider.cpp  cppcompletionprovider.h  cppkeywords.h  (+112 more)
.github/workflows/: linux-build.yml  macos-build.yml  windows-build.yml
ai/: actionbar.cpp  actionbar.h  aicontextmanager.cpp  aicontextmanager.h  aiconversation.h  aihistorylistwidget.cpp  aihistorylistwidget.h  aihistorymanager.cpp  aihistorymanager.h  aipanel.cpp  aipanel.h  aiprovider.cpp  aiprovider.h  aiproviderfactory.cpp  aiproviderfactory.h  aiproviders.cpp  aiproviders.h  airequesthandler.cpp  airequesthandler.h  anthropicprovider.cpp  anthropicprovider.h  chatarea.cpp  chatarea.h  chatbubble.cpp  chatbubble.h  errorjournal.cpp  errorjournal.h  errorlistpanel.cpp  errorlistpanel.h  messagerole.h  openaiprovider.cpp  openaiprovider.h  promptmanager.cpp  promptmanager.h  prompts.json  prompttemplates.h
config/: configmanager.cpp  configmanager.h  default_config.json  settingschangehandler.cpp  settingsmanager.cpp
core/: crashrecoverymanager.cpp  languageutils.cpp  languageutils.h  macoswindow.h  macoswindow.mm  mainwindow.cpp  mainwindow.h  mainwindow.ui  thememanager.cpp  thememanager.h  utilities.h  windowdraghelper.cpp
docs/: ai-assistant-design.md  code-completion-design.md  code-duplication-analysis.md  cross-platform-design.md  main-thread-blocking-analysis.md  performance-analysis.md  settings-panel-redesign.md  terminal-integration-plan.md  ui-theme-design.md
editor/: codeeditor.cpp  codeeditor.h  completionpopup.cpp  completionpopup.h  cppsyntaxhighlighter.cpp  diagnosticsection.cpp  diagnosticsection.h  editorwidget.cpp  editorwidget.h  hovermanager.cpp  hovermanager.h  indenthelper.h  keywordcompletionprovider.cpp  keywordcompletionprovider.h  pythonsyntaxhighlighter.cpp  signaturehelpmanager.cpp  signaturehelpmanager.h  tabmanager.cpp  tabmanager.h  wikilinktextedit.cpp  wikilinktextedit.h
index/: backlinkindex.cpp  backlinkindex.h  indexmanager.cpp  indexmanager.h  tagindex.cpp  tagindex.h
judge/: crawler.cpp  crawler.h  judgeengine.cpp  judgeengine.h  logindialog.cpp  logindialog.h  openjudgemanager.cpp  openjudgemanager.h
lsp/: brackethighlighter.cpp  brackethighlighter.h  completion_helper.py  completionprovider.h  cppcompletionprovider.cpp  cppcompletionprovider.h  cppsyntaxhighlighter.cpp  hovermanager.cpp  lspclient.h  lsputils.h  pythoncompletionprovider.cpp  pythoncompletionprovider.h  pythonsyntaxhighlighter.cpp  signaturehelpmanager.cpp  smdlspmanager.cpp  smdlspmanager.h
panels/: activitybar.cpp  activitybar.h  bottompanel.cpp  bottompanel.h  fileexplorerwidget.cpp  fileexplorerwidget.h  helppanel.cpp  helppanel.h  historypanel.cpp  historypanel.h  judgepanel.cpp  judgepanel.h  openjudgewidget.cpp  openjudgewidget.h  outlinepanel.cpp  outputpanel.cpp  rightpanelcontainer.cpp  runterminalpanel.cpp  runterminalpanel.h  searchpanel.cpp  settingspanel.cpp  settingspanel.h  sidebarpanels.cpp  sidebarpanels.h  smddiagnosticspanel.cpp  smddiagnosticspanel.h  smdoutputwidget.cpp  smdoutputwidget.h  submissionpanel.cpp  submissionpanel.h  terminalpanel.cpp  terminalpanel.h
resources/: help-content.html  preview-template.html  resources.qrc
resources/styles/: global.qss
resources/themes/: dark-vscode.json  light-obsidian.json  light-vscode.json
runner/: codeblockrunner.cpp  codeblockrunner.h  compilerunmanager.cpp  compilerunmanager.h  compilerutils.h  python_executor.py
smd/: smdcell.cpp  smdcell.h  smdeditor.cpp  smdeditor.h  smdformat.h
terminal/: terminalsession.cpp  terminalsession.h  terminalview.cpp  terminalview.h
widgets/: flowlayout.cpp  scrollbarhider.cpp  titlebarbutton.cpp  titlebarbutton.h
